--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,7 @@ spring.jpa.show-sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=imadyasin07@gmail.com
-spring.mail.password=eazowavoctjqizmv
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-
-razorpay.keyId=rzp_test_Yri1GKRA4lXUis
-razorpay.keySecret=2WVwhycZILWBB4u8Ca30t6uJ
